apps/ryans-apartments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ryans-apartments
  namespace: ryans-apartments
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ryans-apartments
  template:
    metadata:
      labels:
        app: ryans-apartments
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: web
          image: docker.io/spencerrung/ryans-apartments:1.2.0 # {"$imagepolicy": "flux-system:ryans-apartments"}
          ports:
            - containerPort: 8080
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 300m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
