apps/ryans-apartments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ryans-apartments
  namespace: ryans-apartments
spec:
  type: ClusterIP
  selector:
    app: ryans-apartments
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
